--- a/carpoint/templates/carpoint/home.html
+++ b/carpoint/templates/carpoint/home.html
@@ -4,6 +4,7 @@
 Home
 {% if user.is_authenticated %}
     <p>Welcome, {{ user.get_username }}. Thanks for logging in. <a href="{% url "account_logout" %}">Logout</a></p>
+    <p>Your time zone is {{ user.account.timezone }}</p>
 {% else %}
     <p>Welcome, new user. Please log in. <a href="{% url "account_login" %}">Login</a></p>
 {% endif %}
