--- a/pinax_theme_bootstrap/templates/theme_bootstrap/base.html
+++ b/pinax_theme_bootstrap/templates/theme_bootstrap/base.html
@@ -17,11 +17,48 @@
             <![endif]-->
         {% endblock %}
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <!-- Bootstrap Core CSS -->
+        <link href="{% static 'casos/css/bootstrap.min.css' %}" rel="stylesheet">
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <!--Nifty Stylesheet [ REQUIRED ]-->
+        <link href="{% static 'casos/css/nifty.min.css' %}" rel="stylesheet">
+        <!--Nifty Red ]-->
+        <link href="{% static 'casos/css/theme-well-red.min.css' %}" rel="stylesheet">
 
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+        <!--Premium Icons [ OPTIONAL ]-->
+        <link href="{% static 'casos/icons/line-icons/premium-line-icons.min.css' %}" rel="stylesheet">
+        <link href="{% static 'casos/icons/solid-icons/premium-solid-icons.min.css' %}" rel="stylesheet">
+
+
+
+        <!-- Custom CSS for admin page-->
+        <!-- <link href="{% static 'places/css/style.css' %}" rel="stylesheet"> -->
+        <!-- <link href="{% static 'places/css/sb-admin.css' %}" rel="stylesheet"> -->
+
+        <!-- Morris Charts CSS -->
+        <!-- <link href="{% static 'places/css/plugins/morris.css' %}" rel="stylesheet"> -->
+
+        <!-- Custom Fonts -->
+        <!-- <link href="{% static 'places/font-awesome/css/font-awesome.min.css' %}   " rel="stylesheet" type="text/css"> -->
+        <!--Open Sans Font [ OPTIONAL ] -->
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=latin" rel="stylesheet">
+
+
+        <!--Page Load Progress Bar [ OPTIONAL ]-->
+        <link href="{% static 'casos/css/pace.min.css' %}" rel="stylesheet">
+        <script src="{% static 'casos/js/pace.min.js' %}"></script>
+
+
+
+        <!-- jQuery -->
+        <script src="{% static 'casos/js/jquery.min.js' %}  "></script>
+
+        <!-- Bootstrap Core JavaScript -->
+        <script src="{% static 'casos/js/bootstrap.min.js' %}  "></script>
+
+        <!--Nifty Admin [ RECOMMENDED ]-->
+        <script src="{% static 'casos/js/nifty.min.js' %}  "></script>
 
         {% block extra_head_base %}
             {% block extra_head %}{% endblock %}
@@ -31,15 +68,19 @@
         <div class="{% block wrapper_class %}{% endblock %}">
 
             {% block topbar_base %}
-                <header>
-                    <div class="navbar navbar-default {% block navbar_class %}navbar-fixed-top{% endblock %}">
+                <header >
+                    <div id="navbar-container" class="boxed {% block navbar_class %}navbar-fixed-top{% endblock %}">
                         <div class="container">
                         {% block topbar %}
                             <div class="navbar-header">
-                                <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                                    <span class="fa fa-bars"></span>
-                                </button>
-                                {% block site_brand %}<a class="navbar-brand" href="{% url 'home' %}">{{ SITE_NAME }}</a>{% endblock %}
+                                {% block site_brand %}
+                                <a class="navbar-brand" href="{% url 'home' %}">
+                                    <div class="brand-title">
+                                     <img src="{% static 'casos/img/logo.png' %}" alt="Nifty Logo" class="brand-icon">
+                                     <span class="brand-text">Carpoint</span>
+                                    </div>
+                                </a>
+                                {% endblock %}
                             </div>
                             <div class="collapse navbar-collapse navbar-responsive-collapse">
                                 {% block nav %}
