--- a/casos/templates/base.html
+++ b/casos/templates/base.html
@@ -77,7 +77,7 @@
             <!--================================-->
             <div class="navbar-header">
                 <a href="index.html" class="navbar-brand">
-                    <img src="{% static 'casos/img/logo.png' %}" alt="Nifty Logo" class="brand-icon">
+                    <!-- <img src="{% static 'casos/img/logo.png' %}" alt="Nifty Logo" class="brand-icon"> -->
                     <div class="brand-title">
                         <span class="brand-text">Carpoint</span>
                     </div>
@@ -106,230 +106,11 @@
 
 
 
-                    <!--Notification dropdown-->
-                    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-                    <li class="dropdown">
-                        <a href="#" data-toggle="dropdown" class="dropdown-toggle">
-                            <i class="pli-bell icon-lg"></i>
-                            <span class="badge badge-header badge-danger"></span>
-                        </a>
-
-                        <!--Notification dropdown menu-->
-                        <div class="dropdown-menu dropdown-menu-md">
-                            <div class="pad-all bord-btm">
-                                <p class="text-semibold text-main mar-no">You have 3 notifications.</p>
-                            </div>
-                            <div class="nano scrollable">
-                                <div class="nano-content">
-                                    <ul class="head-list">
-
-                                        <!-- Dropdown list-->
-                                        <li>
-                                            <a href="#">
-                                                <div class="clearfix">
-                                                    <p class="pull-left">Progressbar</p>
-                                                    <p class="pull-right">70%</p>
-                                                </div>
-                                                <div class="progress progress-sm">
-                                                    <div style="width: 70%;" class="progress-bar">
-                                                        <span class="sr-only">70% Complete</span>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </li>
-
-                                        <!-- Dropdown list-->
-                                        <li>
-                                            <a href="#" class="media">
-                                                <div class="media-left">
-                                                    <i class="pli-hd icon-2x icon-lg"></i>
-                                                </div>
-                                                <div class="media-body">
-                                                    <div class="text-nowrap">With Icon</div>
-                                                    <small class="text-muted">15 minutes ago</small>
-                                                </div>
-                                            </a>
-                                        </li>
-
-                                        <!-- Dropdown list-->
-                                        <li>
-                                            <a href="#" class="media">
-                                                <div class="media-left">
-                                                    <i class="pli-power-cable icon-2x icon-lg"></i>
-                                                </div>
-                                                <div class="media-body">
-                                                    <div class="text-nowrap">With Icon</div>
-                                                    <small class="text-muted">15 minutes ago</small>
-                                                </div>
-                                            </a>
-                                        </li>
-
-                                        <!-- Dropdown list-->
-                                        <li>
-                                            <a href="#" class="media">
-                                                <div class="media-left">
-
-                                <span class="icon-wrap icon-circle bg-primary">
-                                    <i class="pli-disk icon-lg icon-lg"></i>
-                                </span>
-                                                </div>
-                                                <div class="media-body">
-                                                    <div class="text-nowrap">Circle Icon</div>
-                                                    <small class="text-muted">15 minutes ago</small>
-                                                </div>
-                                            </a>
-                                        </li>
-
-                                        <!-- Dropdown list-->
-                                        <li>
-                                            <a href="#" class="media">
-                                        <span class="badge badge-success pull-right">90%</span>
-                                                <div class="media-left">
-
-                                <span class="icon-wrap icon-circle bg-danger">
-                                    <i class="pli-mail-open icon-lg icon-lg"></i>
-                                </span>
-                                                </div>
-                                                <div class="media-body">
-                                                    <div class="text-nowrap">Circle icon with badge</div>
-                                                    <small class="text-muted">50 minutes ago</small>
-                                                </div>
-                                            </a>
-                                        </li>
-
-                                        <!-- Dropdown list-->
-                                        <li>
-                                            <a href="#" class="media">
-                                                <div class="media-left">
-
-                                <span class="icon-wrap bg-info">
-                                    <i class="pli-monitor-3 icon-lg icon-lg"></i>
-                                </span>
-                                                </div>
-                                                <div class="media-body">
-                                                    <div class="text-nowrap">Square icon</div>
-                                                    <small class="text-muted">Last Update 8 hours ago</small>
-                                                </div>
-                                            </a>
-                                        </li>
-
-                                        <!-- Dropdown list-->
-                                        <li>
-                                            <a href="#" class="media">
-                                        <span class="label label-danger pull-right">New</span>
-                                                <div class="media-left">
-
-                                <span class="icon-wrap bg-purple">
-                                    <i class="pli-paintbrush icon-lg icon-lg"></i>
-                                </span>
-                                                </div>
-                                                <div class="media-body">
-                                                    <div class="text-nowrap">Square icon with label</div>
-                                                    <small class="text-muted">Last Update 8 hours ago</small>
-                                                </div>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-
-                            <!--Dropdown footer-->
-                            <div class="pad-all bord-top">
-                                <a href="#" class="btn-link text-dark box-block">
-                                    <i class="pli-arrow-right-2 pull-right"></i>Show All Notifications
-                                </a>
-                            </div>
-                        </div>
-                    </li>
-                    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-                    <!--End notifications dropdown-->
 
 
 
-                    <!--Mega dropdown-->
-                    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-                    <li class="mega-dropdown">
-                        <a href="#" class="mega-dropdown-toggle">
-                            <i class="pli-layout-grid icon-lg"></i>
-                        </a>
-                        <div class="dropdown-menu mega-dropdown-menu">
-                            <div class="clearfix">
-                                <div class="col-sm-12 col-md-3">
 
-                                    <!--Mega menu widget-->
-                                    <div class="text-center bg-info pad-all">
-                                        <h4 class="text-light mar-no">Weekend shopping</h4>
-                                        <div class="pad-ver box-inline">
-                                            <span class="icon-wrap icon-wrap-lg icon-circle bg-trans-light">
-                                                <i class="pli-add-cart icon-4x"></i>
-                                            </span>
-                                        </div>
-                                        <p class="pad-btm">
-                                            Members get <span class="text-lg text-bold">50%</span> more points. Lorem ipsum dolor sit amet!
-                                        </p>
-                                        <a href="#" class="btn btn-info">Learn More...</a>
-                                    </div>
 
-                                </div>
-                                <div class="col-sm-4 col-md-3">
-
-                                    <!--Mega menu list-->
-                                    <ul class="list-unstyled">
-                                        <li class="dropdown-header">Pages</li>
-                                        <li><a href="#">Profile</a></li>
-                                        <li><a href="#">Search Result</a></li>
-                                        <li><a href="#">FAQ</a></li>
-                                        <li><a href="#">Sreen Lock</a></li>
-                                        <li><a href="#" class="disabled">Disabled</a></li>
-                                        <li class="divider"></li>
-                                        <li class="dropdown-header">Icons</li>
-                                        <li><a href="#"><span class="pull-right badge badge-purple">479</span> Font Awesome</a></li>
-                                        <li><a href="#">Skycons</a></li>
-                                    </ul>
-
-                                </div>
-                                <div class="col-sm-4 col-md-3">
-
-                                    <!--Mega menu list-->
-                                    <ul class="list-unstyled">
-                                        <li class="dropdown-header">Mailbox</li>
-                                        <li><a href="#"><span class="pull-right label label-danger">Hot</span>Indox</a></li>
-                                        <li><a href="#">Read Message</a></li>
-                                        <li><a href="#">Compose</a></li>
-                                        <li class="divider"></li>
-                                        <li class="dropdown-header">Featured</li>
-                                        <li><a href="#">Smart navigation</a></li>
-                                        <li><a href="#"><span class="pull-right badge badge-success">6</span>Exclusive plugins</a></li>
-                                        <li><a href="#">Lot of themes</a></li>
-                                        <li><a href="#">Transition effects</a></li>
-                                    </ul>
-
-                                </div>
-                                <div class="col-sm-4 col-md-3">
-
-                                    <!--Mega menu list-->
-                                    <ul class="list-unstyled">
-                                        <li class="dropdown-header">Components</li>
-                                        <li><a href="#">Tables</a></li>
-                                        <li><a href="#">Charts</a></li>
-                                        <li><a href="#">Forms</a></li>
-                                        <li class="divider"></li>
-                                        <li>
-                                            <form role="form" class="form">
-                                                <div class="form-group">
-                                                    <label class="dropdown-header" for="demo-megamenu-input">Newsletter</label>
-                                                    <input id="demo-megamenu-input" type="email" placeholder="Enter email" class="form-control">
-                                                </div>
-                                                <button class="btn btn-primary btn-block" type="submit">Submit</button>
-                                            </form>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-                    <!--End mega dropdown-->
                     {% endif %}
                 </ul>
                 <ul class="nav navbar-top-links pull-right">
@@ -507,42 +288,7 @@
                                 </div>
 
 
-                                <!--Shortcut buttons-->
-                                <!--================================-->
-                                <div id="mainnav-shortcut">
-                                    <ul class="list-unstyled shortcut-wrap">
-                                        <li class="col-xs-3" data-content="My Profile">
-                                            <a class="shortcut-grid" href="#">
-                                                <div class="icon-wrap icon-wrap-sm icon-circle bg-trans-dark">
-                                                <i class="psi-male"></i>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li class="col-xs-3" data-content="Messages">
-                                            <a class="shortcut-grid" href="#">
-                                                <div class="icon-wrap icon-wrap-sm icon-circle bg-trans-dark">
-                                                <i class="psi-speech-bubble-3"></i>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li class="col-xs-3" data-content="Activity">
-                                            <a class="shortcut-grid" href="#">
-                                                <div class="icon-wrap icon-wrap-sm icon-circle bg-trans-dark">
-                                                <i class="psi-thunder"></i>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li class="col-xs-3" data-content="Lock Screen">
-                                            <a class="shortcut-grid" href="#">
-                                                <div class="icon-wrap icon-wrap-sm icon-circle bg-trans-dark">
-                                                <i class="psi-lock-2"></i>
-                                                </div>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <!--================================-->
-                                <!--End shortcut buttons-->
+
 
                                 <ul id="mainnav-menu" class="list-group">
 
@@ -551,10 +297,6 @@
                                         <a href="{% url 'home' %}">
 						                    <i class="psi-quill-2"></i>
 						                    <span class="menu-title">Mis Casos</span>
-						                </a>
-                                        <a href="{% url 'home' %}">
-						                    <i class="psi-quill-2"></i>
-						                    <span class="menu-title">Mis Autos</span>
 						                </a>
 						            <!--Menu list item-->
 						            <li class="active-link">
