Switched to python 3 fixed encoding bug

--- a/casos/templates/base.html
+++ b/casos/templates/base.html
@@ -76,7 +76,7 @@
             <!--Brand logo & name-->
             <!--================================-->
             <div class="navbar-header">
-                <a href="index.html" class="navbar-brand">
+                <a href="{% url 'home'  %}" class="navbar-brand">
                     <!-- <img src="{% static 'casos/img/logo.png' %}" alt="Nifty Logo" class="brand-icon"> -->
                     <div class="brand-title">
                         <span class="brand-text">Carpoint</span>
