Minor Fixes,  changed casos for vehiculos

--- a/casos/templates/base.html
+++ b/casos/templates/base.html
@@ -17,6 +17,8 @@
         <!--Nifty Red ]-->
         <link href="{% static 'casos/css/theme-well-red.min.css' %}" rel="stylesheet">
 
+        <link href="{% static 'casos/css/style.css' %}" rel="stylesheet">
+
 
         <!--Premium Icons [ OPTIONAL ]-->
         <link href="{% static 'casos/icons/line-icons/premium-line-icons.min.css' %}" rel="stylesheet">
@@ -257,8 +259,8 @@
 						            <!--Category name-->
 						            <li class="list-header">Menu Principal</li>
                                         <a href="{% url 'home' %}">
-						                    <i class="psi-quill-2"></i>
-						                    <span class="menu-title">Mis Casos</span>
+						                    <i class="psi-gear"></i>
+						                    <span class="menu-title">Mis Vehículos</span>
 						                </a>
 						            <!--Menu list item-->
 						            <li class="active-link">
