--- a/casos/templates/caso/caso_detail.html
+++ b/casos/templates/caso/caso_detail.html
@@ -5,9 +5,9 @@
 
 
 {% block title %}
-          Detalle de Caso
+          Detalle de Vehículo
 {% endblock %}
-{% block head %}Detalle de Caso # {{ caso.id }}{% endblock %}
+{% block head %}Detalle de Vehículo # {{ caso.id }}{% endblock %}
 {% block breadcrumb %}
 
 
