--- a/pinax_theme_bootstrap/templates/theme_bootstrap/base.html
+++ b/pinax_theme_bootstrap/templates/theme_bootstrap/base.html
@@ -25,6 +25,8 @@
         <!--Nifty Red ]-->
         <link href="{% static 'casos/css/theme-well-red.min.css' %}" rel="stylesheet">
 
+        <link href="{% static 'casos/css/style.css' %}" rel="stylesheet">
+
 
         <!--Premium Icons [ OPTIONAL ]-->
         <link href="{% static 'casos/icons/line-icons/premium-line-icons.min.css' %}" rel="stylesheet">
@@ -76,7 +78,8 @@
                                 {% block site_brand %}
                                 <a class="navbar-brand" href="{% url 'home' %}">
                                     <div class="brand-title">
-                                     <img src="{% static 'casos/img/logo.png' %}" alt="Nifty Logo" class="brand-icon">
+                                        <!-- <img src="{% static 'casos/img/logo.png' %}" alt="Nifty Logo" class="brand-icon"> -->
+
                                      <span class="brand-text">Carpoint</span>
                                     </div>
                                 </a>
