--- a/casos/templates/base.html
+++ b/casos/templates/base.html
@@ -81,7 +81,7 @@
                 <a href="{% url 'home'  %}" class="navbar-brand">
                     <!-- <img src="{% static 'casos/img/logo.png' %}" alt="Nifty Logo" class="brand-icon"> -->
                     <div class="brand-title">
-                        <span class="brand-text">Carpoint</span>
+                        <img src="{% static 'casos/img/logo.png' %}" alt="Nifty Logo" class="brand-icon">
                     </div>
                 </a>
             </div>
