--- a/casos/templates/caso/caso_detail.html
+++ b/casos/templates/caso/caso_detail.html
@@ -36,6 +36,10 @@
 					                    <!--Horizontal description-->
 					                    <!--===================================================-->
 					                    <dl class="dl-horizontal">
+											<dt>Vehiculo: </dt>
+					                        <dd>{{ caso.marca }} {{ caso.modelo }} {{ caso.anio }}</dd>
+											<dt>Nombre de Cliente: </dt>
+					                        <dd>{{ caso.cliente }}</dd>
 					                        <dt>Fecha de Recepcion </dt>
 					                        <dd>{{ caso.fecha_creado }}</dd>
 					                        <dt>Descripcion</dt>
@@ -67,11 +71,13 @@
 															<h4 class="panel-title">
 																<a data-parent="#accordion" data-toggle="collapse" href="#collapse{{avance.pk}}" aria-expanded="false" class="collapsed">Avances del {{ avance.fecha_creado }}</a>
 															</h4>
+
 														</div>
 
 														<!--Accordion content-->
 														<div class="panel-collapse collapse" id="collapse{{avance.pk}}" aria-expanded="false" style="height: 0px;">
 															<div class="panel-body">
+																<p><b>Descripción: </b> {{ avance.descripcion }} </p>
 																<div class="row">
 																 <div class="col-xs-6 col-md-2 col-md-offset-1">
 																   <img class="open-Image img-thumbnail" src="../media/{{ avance.imagen_1 }}" data-target="#demo-lg-modal" data-id="../media/{{ avance.imagen_1 }}" data-toggle="modal" />
@@ -89,6 +95,9 @@
 																 <div class="col-xs-6 col-md-2">
 																   <img class="open-Image img-thumbnail" src="../media/{{ avance.imagen_5 }}" data-target="#demo-lg-modal" data-id="../media/{{ avance.imagen_5 }}" data-toggle="modal"/>
 																 </div>
+																</div>
+																<div class="row">
+
 																</div>
 															</div>
 														</div>
