--- a/casos/templates/caso/caso_list.html
+++ b/casos/templates/caso/caso_list.html
@@ -27,15 +27,14 @@
         {% if is_aseguradora %}
         <div class="panel">
 					    <div class="panel-body">
-                            <h3 class="panel-title">Buscar</h3>
 					        <!-- Inline Form  -->
 					        <!--===================================================-->
-					        <form class="form-inline">
+					        <form class="form-inline" action=".">
 					            <div class="form-group">
 					                <label for="demo-inline-inputmail" class="sr-only">Buscar usuario:</label>
-                                    <row>
-					                <input type="email" placeholder="Nombre de usuario" id="demo-inline-inputmail" class="form-control">
-					                </row>
+
+					                <input type="text" name="search" placeholder="Nombre de usuario" id="demo-inline-inputmail" class="form-control">
+
                                 </div>
 					            <button class="btn btn-primary" type="submit">Buscar</button>
 					        </form>
@@ -46,7 +45,7 @@
 					</div>
         {% endif %}
 
-        <div class="panel panel-default">
+        <div class="panel">
 
             <div class="panel-heading">
 
@@ -78,6 +77,9 @@
                                     <h4> Marca: {{ caso.marca }} | Modelo: {{ caso.modelo }} | Año: {{ caso.anio }}</h4>
                                     <p><b>Fecha Ingreso: </b> {{ caso.fecha_creado }} | <b>Estado:</b> {{ caso.get_estado_caso_id_display }} | <b>Aseguradora:</b> {{ caso.aseguradora }} </p>
                                     <p><b>Observaciones: </b> {{ caso.observaciones }} </p>
+                                    {% if is_aseguradora %}
+                                    <p><b>Usuario: </b> {{ caso.cliente }} </p>
+                                    {% endif %}
                                 </span>
                               </a>
 
