--- a/pinax_theme_bootstrap/templates/theme_bootstrap/base.html
+++ b/pinax_theme_bootstrap/templates/theme_bootstrap/base.html
@@ -80,7 +80,7 @@
                                     <div class="brand-title">
                                         <!-- <img src="{% static 'casos/img/logo.png' %}" alt="Nifty Logo" class="brand-icon"> -->
 
-                                     <span class="brand-text"><img src="{% static 'casos/img/logo.png' %}" alt="Nifty Logo" class="brand-icon"></span>
+                                     <!-- <span class="brand-text"><img src="{% static 'casos/img/logo.png' %}" alt="Nifty Logo" class="brand-icon"></span> -->
                                     </div>
                                 </a>
                                 {% endblock %}
